[package]
name = "qos_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core components and logic for QuorumOS applications"
repository = "https://github.com/tkhq/qos"
keywords = ["quorumos", "enclave", "nitro", "tee", "quorum"]
categories = ["os"]

[lints]
workspace = true

[dependencies]
qos_crypto = { workspace = true }
qos_hex = { workspace = true, features = ["serde"] }
qos_p256 = { workspace = true }
qos_nsm = { workspace = true, default-features = false }

nix = { workspace = true }
libc = { workspace = true }
borsh = { workspace = true }

# For AWS Nitro
aws-nitro-enclaves-nsm-api = { workspace = true }

serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal", "process"], default-features = false }
tokio-vsock = { workspace = true }

[dev-dependencies]
qos_test_primitives = { workspace = true }
qos_p256 = { workspace = true, features = ["mock"] }
qos_nsm = { workspace = true, features = ["mock"], default-features = false }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[features]
# Support for VSOCK
vm = []
# Never use in production - support for mock NSM
mock = ["qos_nsm/mock"]
