[package]
name = "qos_crypto"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
sha2 = { workspace = true }
thiserror = { workspace = true }
vsss-rs = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }


[dev-dependencies]
qos_hex = { workspace = true }
