[package]
name = "qos_crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
sha2 = { workspace = true }
thiserror = { workspace = true }
vsss-rs = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }


[dev-dependencies]
qos_hex = { workspace = true }
