[package]
name = "qos_enclave"
version = "1.2.0"
authors = [""]
rust-version = "1.88"
edition = "2021"
publish = false

[dependencies]
# As of 8/2025, AWS doesn't have a recent crate version of aws-nitro-enclaves-cli published
# in a typical crate repository -> directly use the git version on GitHub as a workaround
#
# The pinned commit corresponds to tag "v1.4.3" after https://github.com/aws/aws-nitro-enclaves-cli/issues/705
nitro-cli = { git = "https://github.com/aws/aws-nitro-enclaves-cli", rev = "66e60163843aa083992b6d6c0d6c94c90cd9baf4" }
libc = "=0.2.174"

[features]
default = []
