[package]
name = "qos_enclave"
version = "1.2.0"
authors = [""]
rust-version = "1.88"
edition = "2021"
publish = false

[dependencies]
# As of 8/2025, AWS doesn't have a recent crate version of aws-nitro-enclaves-cli published
# in a typical crate repository -> directly use the git version on GitHub as a workaround
#
# The pinned commit corresponds to tag "v1.4.3" after https://github.com/aws/aws-nitro-enclaves-cli/issues/705
nitro-cli = { git = "https://github.com/aws/aws-nitro-enclaves-cli", rev = "82501bb9637e4b41c87ce73f8ffc2ce51ca37a6a" }
libc = "=0.2.182"

[features]
default = []
