[package]
name = "qos_enclave"
version = "1.2.0"
authors = [""]
rust-version = "1.88"
edition = "2024"
publish = false

[dependencies]
# As of 8/2025, AWS doesn't have a recent crate version of aws-nitro-enclaves-cli published
# in a typical crate repository -> directly use the git version on GitHub as a workaround
#
# The pinned commit corresponds to tag "v1.4.3" after https://github.com/aws/aws-nitro-enclaves-cli/issues/705
nitro-cli = { git = "https://github.com/aws/aws-nitro-enclaves-cli", rev = "18a5f6f35f110c0f235f193ae3caff9434d64ee1" }
libc = "=0.2.174"

[features]
default = []
