[package]
name = "qos_hex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Utilities for encoding and decoding hex strings"
repository = "https://github.com/tkhq/qos"
keywords = ["quorumos", "hex", "encoding"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
