[package]
name = "qos_host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
qos_core = { workspace = true, default-features = false }
qos_hex = { workspace = true, features = ["serde"], default-features = false }

# Third party
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
borsh = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[features]
vm = ["qos_core/vm"]
