[package]
name = "qos_net"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
qos_core = { workspace = true, default-features = false }

borsh = { workspace = true }
hickory-resolver = { workspace = true, optional = true }
rand = { workspace = true, features = [
    "thread_rng",
], optional = true }
tokio = { workspace = true }

[dev-dependencies]
qos_test_primitives = { workspace = true }
httparse = { workspace = true }
chunked_transfer = { workspace = true }
serde_json = { workspace = true, features = [
    "std",
] }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[features]
default = ["proxy"]                  # keep this as a default feature ensures we lint by default
proxy = ["rand", "hickory-resolver"]
vm = []
