[package]
name = "qos_net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
qos_core = { workspace = true, default-features = false }

borsh = { workspace = true }
hickory-resolver = { workspace = true, optional = true }
rand = { workspace = true, features = [
    "thread_rng",
], optional = true }
tokio = { workspace = true }

[dev-dependencies]
qos_test_primitives = { workspace = true }
httparse = { workspace = true }
chunked_transfer = { workspace = true }
serde_json = { workspace = true, features = [
    "std",
] }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[features]
default = ["proxy"]                  # keep this as a default feature ensures we lint by default
proxy = ["rand", "hickory-resolver"]
vm = []
