[package]
name = "qos_net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Socket to TCP proxy for QuorumOS enclave network access"
repository = "https://github.com/tkhq/qos"
keywords = ["quorumos", "enclave", "nitro", "proxy", "vsock"]
categories = ["network-programming"]

[lints]
workspace = true

[dependencies]
qos_core = { workspace = true, default-features = false }

borsh = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true, optional = true }
rand = { workspace = true, features = [
    "thread_rng",
], optional = true }
serde = { workspace = true, features = ["derive"], default-features = false }
tokio = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

[dev-dependencies]
qos_test_primitives = { workspace = true }
httparse = { workspace = true }
chunked_transfer = { workspace = true }
serde_json = { workspace = true, features = [
    "std",
] }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[features]
default = ["proxy"] # keep this as a default feature ensures we lint by default
proxy = ["hickory-resolver", "tokio", "tokio-rustls"]
vm = ["qos_core/vm"]
