[package]
name = "qos_nsm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AWS Nitro Secure Module attestation endpoints and types"
repository = "https://github.com/tkhq/qos"
keywords = ["quorumos", "nitro", "enclave", "attestation", "aws"]
categories = ["cryptography"]

[lints]
workspace = true

[dependencies]
qos_hex = { workspace = true }
borsh = { workspace = true }
aws-nitro-enclaves-nsm-api = { workspace = true, features = ["nix"] }
aws-nitro-enclaves-cose = { workspace = true }
sha2 = { workspace = true }
webpki = { workspace = true }
serde_bytes = { workspace = true }
# as of 0.12.0, the "ecdsa" feature enables "sha384", some "ecdsa-core", and others
p384 = { workspace = true }
x509-cert = { workspace = true }

[dev-dependencies]
# 1.0.0 requires Rust edition 2024
hex-literal = { workspace = true }

[features]
# Never use in production - support for mock NSM
mock = []
mock_realtime = []
