[package]
name = "qos_p256"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
qos_hex = { workspace = true }

borsh = { workspace = true }

sha2 = { workspace = true }
# as of 0.12.0, the "ecdsa" feature enables "sha384", some "ecdsa-core", and others
p256 = { workspace = true, features = ["ecdh", "ecdsa", "std"] }
aes-gcm = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
qos_test_primitives = { workspace = true }

[features]
# Things to make writing tests easier
mock = []