[package]
name = "qos_p256"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Signing and encryption utilities for P-256 keys"
repository = "https://github.com/tkhq/qos"
keywords = ["quorumos", "p256", "ecdsa", "ecdh", "encryption"]
categories = ["cryptography"]

[lints]
workspace = true

[dependencies]
qos_hex = { workspace = true }

borsh = { workspace = true }

sha2 = { workspace = true }
# as of 0.13.0, the p256 crate "ecdsa" feature enables "sha384", some "ecdsa-core", and others
p256 = { workspace = true, features = ["ecdh", "ecdsa", "std"] }
aes-gcm = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
qos_test_primitives = { workspace = true }

[features]
# Things to make writing tests easier
mock = []